testsuite/tests/parse-errors/let_mutable_upstream_compatible.ml
(* TEST
   flags = "-extension-universe upstream_compatible";
   toplevel; *)

let _ = let mutable x = 20 in x;;
