testsuite/tests/parse-errors/let_mutable_upstream_compatible.compilers.reference
Line 5, characters 20-21:
5 | let _ = let mutable x = 20 in x;;
                        ^
Error: The extension "let_mutable" is disabled and cannot be used

